compile-tests/fixtures/compile-errors/unregistered-type/input.ts
import createValidator, { register } from "../../../../dist/typecheck.macro";

interface Foo<T> {}
createValidator<Foo<string>>();
